<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EasyOA</string>
    <string name="app_display_name">EasyOA</string>
    <string name="account">输入用户名</string>
    <string name="password">输入密码</string>
    <string name="login">登 录</string>
    <string name="auto_save_password">记住用户名</string>
    <string name="sending_request">正在发送请求</string>
    <string name="all_contact">全部联系人</string>
    <string name="detail">联系人详情</string>
    <string name="entername">请输入姓名</string>
    <string name="phone">电话</string>
    <string name="mobile">手机</string>
    <string name="email">邮件</string>
    <string name="department">部门</string>
    <string name="other">其他</string>
    <string name="nickname">昵称</string>
    <string name="address">住址</string>
    <string name="company">公司</string>
    <string name="addadd">地   址</string>
    <string name="addnick">昵   称</string>
    <string name="addnote">备   注</string>
    <string name="note">备注</string>
    <string name="group">分组</string>
    <string name="addmore">添加更多属性</string>
    <string name="inputphone">请输入电话</string>
    <string name="inputemail">请输入邮件地址</string>
    <string name="inputmobile">请输入手机</string>
    <string name="inputdepartment">请输入部门</string>
    <string name="inputaddress">请输入住址</string>
    <string name="inputcompany">请输入公司名称</string>
    <string name="inputnickname">请输入昵称</string>
    <string name="inputnote">请输入备注</string>
    <string name="person">个人信息</string>
    <string name="select">请选择类型</string>
    <string name="menu_settings">Settings</string>
    <string name="frame_title_email_inbox">收件箱</string>
    <string name="frame_title_email_outbox">送件箱</string>
    <string name="frame_title_email_new">写邮件</string>
    <string name="frame_title_email_split">分隔符</string>
    <string name="frame_title_calendar_todo">待办</string>
    <string name="frame_title_calendar_done">已办</string>
    <string name="frame_title_calendar_new">新建</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_email_detail">EmailDetailActivity</string>
    <string name="calendar_activity">CalendarActivity</string>
    <string name="calendar_detail_activity">CalendarDetailActivity</string>
        <string name="calendar_edit_activity">CalendarEditActivity</string>
    <string name="menu_item_delete">删除</string>
    <string name="menu_item_edit">编辑</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_update">最近更新：</string>
    <string name="pull_to_refresh_refreshing_label">加载中&#8230;</string>
    <string name="load_ing">加载中···</string>
    <string name="load_more">更多</string>
    <string name="load_full">已加载全部</string>
    <string name="load_empty">暂无数据</string>
    <string name="load_error">加载数据出错</string>
    <string name="reciever_empty">请输入收件人信息</string>
    <string name="email_send_success">邮件发送成功</string>
    <string name="netBad">未连接网络</string>
    <string name="updatre_complete">更新完成</string>
    <string name="delete_mail_success">删除成功</string>
	<string name="public_file">公共文件</string>
	<string name="download_file">已下载文件</string>
	<string name="wait">请稍等&#8230;</string>
	<string name="creatingCalendar">正在创建日历</string>
</resources>