<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff1f1f1"
    android:orientation="vertical"
    android:paddingBottom="10dip" >

    <TextView
        android:id="@+id/txtDialogTitle"
        android:layout_width="fill_parent"
        android:layout_height="55dip"
        android:background="#106184"
        android:gravity="center"
        android:text="@string/select"
        android:textColor="#ffffff"
        android:textSize="24dip" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtAddAdress"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:background="@drawable/btn_style2"
                android:gravity="center"
                android:text="@string/addadd"
                android:textColor="#000000"
                android:textSize="22dip" />           

            <TextView
                android:id="@+id/txtAddNickname"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:background="@drawable/btn_style2"
                android:gravity="center"
                android:text="@string/addnick"
                android:textColor="#000000"
                android:textSize="22dip" />          

            <TextView
                android:id="@+id/txtAddNote"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:background="@drawable/btn_style2"
                android:gravity="center"
                android:text="@string/addnote"
                android:textColor="#000000"
                android:textSize="22dip" />
        </LinearLayout>
</LinearLayout>