<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginpage"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/tool_bar_bg"
    android:orientation="vertical" >


<LinearLayout
        android:id="@+id/input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
         android:layout_marginTop="150dip"
        android:layout_marginLeft="28.0dip"
        android:layout_marginRight="28.0dip"
        android:background="@drawable/login_input"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/accounts"
            android:layout_width="fill_parent"
            android:layout_height="44.0dip"
            android:background="#00ffffff"
            android:hint="@string/account"
            android:maxLength="16"
            android:maxLines="1"
            android:paddingLeft="12.0dip"
            android:textColor="#ff1d1d1d"
            android:textColorHint="#ff666666"
            android:textSize="16.0sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:layout_marginLeft="1.0px"
            android:layout_marginRight="1.0px"
            android:background="#ffc0c3c4" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="44.0dip"
            android:background="#00ffffff"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:paddingLeft="12.0dip"
            android:textColor="#ff1d1d1d"
            android:textColorHint="#ff666666"
            android:textSize="16.0sp" />
    </LinearLayout>
<RelativeLayout
    	android:id="@+id/checkbox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input"
        android:layout_marginLeft="30.0dip"
        android:layout_marginRight="30.0dip"
        android:layout_marginTop="8.0dip"
        >

        <CheckBox
            android:id="@+id/auto_save_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:button="@null"
            android:checked="true"
            android:drawableLeft="@drawable/checkbox_bg1"
            android:drawablePadding="4.0dip"
            android:text="@string/auto_save_password"
            android:textColor="#ffffffff"
            android:textSize="12.0sp" />

    </RelativeLayout>
    <Button
        android:id="@+id/login"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_below="@id/checkbox"
        android:layout_marginLeft="28.0dip"
        android:layout_marginRight="28.0dip"
        android:layout_marginTop="12.0dip"
        android:background="@drawable/chat_send_button_bg"
        android:gravity="center"
        android:paddingTop="5.0dip"
        android:text="@string/login"
        android:textColor="#ff333333"
        android:textSize="18.0sp" />


</RelativeLayout>