<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff1f1f1" >

    <RelativeLayout
        android:id="@+id/tool_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#106184" >

        <ImageButton
            android:id="@+id/imb_new_back"
            android:layout_width="45dip"
            android:layout_height="40dip"
            android:layout_centerVertical="true"
            android:background="#106184"
            android:src="@drawable/tool_bar_style" />

        <ImageView
            android:id="@+id/img_divider"
            android:layout_width="1dip"
            android:layout_height="40dip"
            android:layout_toRightOf="@id/imb_new_back"
            android:background="@drawable/top_bar_diviver" />

        <TextView
            android:id="@+id/txtNewContactTitle"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/img_divider"
            android:background="#106184"
            android:gravity="center"
            android:text="@string/detail"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <!-- 中间编辑栏 -->

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/tool_bar" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#fff1f1f1"
            android:paddingBottom="50dip" >

            <RelativeLayout
                android:id="@+id/llPhotoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/name"
                    android:layout_width="fill_parent"
                    android:layout_height="45dip"
                    android:layout_marginLeft="15dip"
                    android:layout_marginTop="10dip"
                    android:text="Name"
                    android:textColor="#000000"
                    android:textSize="22dip" />

                <ImageButton
                    android:id="@+id/imb_contact_email"
                    android:layout_width="40dip"
                    android:layout_height="40dip"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dip"
                    android:layout_centerVertical="true"
                    android:background="@drawable/title_email_icon"/>
                 <ImageButton
                    android:id="@+id/imb_contact_msg"
                    android:layout_width="40dip"
                    android:layout_height="40dip"
                    android:layout_toLeftOf="@id/imb_contact_email"
                    android:layout_centerVertical="true"
                    android:background="@drawable/title_msg_icon"/>
                <ImageButton
                    android:id="@+id/imb_contact_call"
                    android:layout_width="40dip"
                    android:layout_height="40dip"
                    android:layout_toLeftOf="@id/imb_contact_msg"
                    android:layout_centerVertical="true"
                    android:background="@drawable/title_call_icon"/>
            </RelativeLayout>

            <!-- phone -->

            <RelativeLayout
                android:id="@+id/rlPhoneTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/llPhotoTitle"
                android:layout_marginTop="10dip" >

                <ImageView
                    android:id="@+id/img_phone"
                    android:layout_width="26dip"
                    android:layout_height="26dip"
                    android:layout_marginLeft="20dip"
                    android:src="@drawable/title_call_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/img_phone"
                    android:layout_marginLeft="15dip"
                    android:layout_toRightOf="@id/img_phone"
                    android:gravity="center_vertical"
                    android:text="@string/phone"
                    android:textColor="#398ece"
                    android:textSize="17sp" />

                <ImageView
                    android:id="@+id/img_line01"
                    android:layout_width="fill_parent"
                    android:layout_height="1.5dip"
                    android:layout_below="@id/img_phone"
                    android:layout_marginLeft="12dip"
                    android:layout_marginRight="12dip"
                    android:background="#398ece" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlPhone"
                android:layout_width="fill_parent"
                android:layout_height="45dip"
                android:layout_below="@id/rlPhoneTitle"
                android:layout_marginTop="8dip"
                android:background="#fff1f1f1"
                android:divider="@null"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txt_phone"
                    style="@style/textstyle01"
                    android:text="@string/phone" />

                <EditText
                    android:id="@+id/edt_inputphone"
                    android:layout_width="150dip"
                    android:layout_height="33dip"
                    android:layout_marginLeft="10dip"
                    android:layout_toRightOf="@id/txt_phone"
                    android:background="@drawable/info_bg"
                    android:enabled="false"
                    android:hint="@string/inputphone"
                    android:textColor="#000000"
                    android:textSize="17sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlMobile"
                android:layout_width="fill_parent"
                android:layout_height="45dip"
                android:layout_below="@id/rlPhone"
                android:layout_marginTop="8dip"
                android:background="#fff1f1f1"
                android:divider="@null"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txt_mobile"
                    style="@style/textstyle01"
                    android:text="@string/mobile" />

                <EditText
                    android:id="@+id/edt_inputmobile"
                    android:layout_width="150dip"
                    android:layout_height="33dip"
                    android:layout_marginLeft="10dip"
                    android:layout_toRightOf="@id/txt_mobile"
                    android:background="@drawable/info_bg"
                    android:enabled="false"
                    android:hint="@string/inputmobile"
                    android:textColor="#000000"
                    android:textSize="17sp" />
            </RelativeLayout>
            <!-- email -->

            <RelativeLayout
                android:id="@+id/rlEmailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rlMobile"
                android:layout_marginTop="15dip" >

                <ImageView
                    android:id="@+id/img_email"
                    android:layout_width="26dip"
                    android:layout_height="26dip"
                    android:layout_marginLeft="20dip"
                    android:src="@drawable/title_email_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/img_email"
                    android:layout_marginLeft="15dip"
                    android:layout_toRightOf="@id/img_email"
                    android:gravity="center_vertical"
                    android:text="@string/email"
                    android:textColor="#398ece"
                    android:textSize="17sp" />

                <ImageView
                    android:id="@+id/img_line02"
                    android:layout_width="fill_parent"
                    android:layout_height="1.5dip"
                    android:layout_below="@id/img_email"
                    android:layout_marginLeft="12dip"
                    android:layout_marginRight="12dip"
                    android:background="#398ece" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlEmail"
                android:layout_width="fill_parent"
                android:layout_height="45dip"
                android:layout_below="@id/rlEmailTitle"
                android:layout_marginTop="8dip"
                android:background="#fff1f1f1"
                android:divider="@null"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txt_email"
                    style="@style/textstyle01"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/edt_inputemail"
                    android:layout_width="150dip"
                    android:layout_height="33dip"
                    android:layout_marginLeft="10dip"
                    android:layout_toRightOf="@id/txt_email"
                    android:background="@drawable/info_bg"
                    android:enabled="false"
                    android:hint="@string/inputemail"
                    android:textColor="#000000"
                    android:textSize="17sp" />
            </RelativeLayout>

            <!-- department -->

            <RelativeLayout
                android:id="@+id/rlDepartmentTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rlEmail"
                android:layout_marginTop="15dip" >

                <ImageView
                    android:id="@+id/img_department"
                    android:layout_width="26dip"
                    android:layout_height="26dip"
                    android:layout_marginLeft="20dip"
                    android:src="@drawable/title_im_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/img_department"
                    android:layout_marginLeft="15dip"
                    android:layout_toRightOf="@id/img_department"
                    android:gravity="center_vertical"
                    android:text="@string/department"
                    android:textColor="#398ece"
                    android:textSize="17sp" />

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="1.5dip"
                    android:layout_below="@id/img_department"
                    android:layout_marginLeft="12dip"
                    android:layout_marginRight="12dip"
                    android:background="#398ece" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlDepartment"
                android:layout_width="fill_parent"
                android:layout_height="45dip"
                android:layout_below="@id/rlDepartmentTitle"
                android:layout_marginTop="8dip"
                android:background="#fff1f1f1"
                android:divider="@null"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txt_department"
                    style="@style/textstyle01"
                    android:text="@string/department" />

                <EditText
                    android:id="@+id/edt_inputdepartment"
                    android:layout_width="150dip"
                    android:layout_height="33dip"
                    android:layout_marginLeft="10dip"
                    android:layout_toRightOf="@id/txt_department"
                    android:background="@drawable/info_bg"
                    android:enabled="false"
                    android:hint="@string/inputdepartment"
                    android:textColor="#000000"
                    android:textSize="17sp" />
            </RelativeLayout>

            <!-- other -->

            <RelativeLayout
                android:id="@+id/rlOtherTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rlDepartment"
                android:layout_marginBottom="15dip"
                android:layout_marginTop="15dip" >

                <ImageView
                    android:id="@+id/img_other"
                    android:layout_width="26dip"
                    android:layout_height="26dip"
                    android:layout_marginLeft="20dip"
                    android:src="@drawable/title_other_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/img_other"
                    android:layout_marginLeft="15dip"
                    android:layout_toRightOf="@id/img_other"
                    android:gravity="center_vertical"
                    android:text="@string/other"
                    android:textColor="#398ece"
                    android:textSize="17sp" />

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="1.5dip"
                    android:layout_below="@id/img_other"
                    android:layout_marginLeft="12dip"
                    android:layout_marginRight="12dip"
                    android:background="#398ece" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlNickname"
                android:layout_width="fill_parent"
                android:layout_height="45dip"
                android:layout_below="@id/rlOtherTitle"
                android:layout_marginBottom="10dip"
                android:background="#fff1f1f1"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/txt_nickname"
                    style="@style/textstyle01"
                    android:text="@string/nickname" />

                <EditText
                    android:id="@+id/edt_inputnickname"
                    android:layout_width="150dip"
                    android:layout_height="33dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="5dip"
                    android:layout_toRightOf="@id/txt_nickname"
                    android:background="@drawable/info_bg"
                    android:enabled="false"
                    android:hint="@string/inputnickname"
                    android:textColor="#000000"
                    android:textSize="17sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlAddress"
                android:layout_width="fill_parent"
                android:layout_height="45dip"
                android:layout_below="@id/rlNickname"
                android:layout_marginBottom="10dip"
                android:background="#fff1f1f1"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/txt_address"
                    style="@style/textstyle01"
                    android:text="@string/address" />

                <EditText
                    android:id="@+id/edt_inputaddress"
                    android:layout_width="150dip"
                    android:layout_height="33dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="5dip"
                    android:layout_toRightOf="@id/txt_address"
                    android:background="@drawable/info_bg"
                    android:enabled="false"
                    android:hint="@string/inputaddress"
                    android:textColor="#000000"
                    android:textSize="17sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlNote"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rlAddress"
                android:layout_marginBottom="10dip"
                android:background="#fff1f1f1"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/txt_note"
                    style="@style/textstyle01"
                    android:text="@string/note" />

                <EditText
                    android:id="@+id/edt_inputnote"
                    android:layout_width="150dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="5dip"
                    android:layout_toRightOf="@id/txt_note"
                    android:background="@drawable/info_bg"
                    android:enabled="false"
                    android:hint="@string/inputnote"
                    android:inputType="textMultiLine"
                    android:textColor="#000000"
                    android:textSize="17sp" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>